    - support environment to switch sorting for searches:
      SOFTWARE_CENTER_SEARCHES_SORT_MODE={popcon,alphabetic,xapian}
      (to be able to test the different mode quickly)
  * softwarecenter/view/appdetailsview.py:
    - fix crash when no icon can be found (LP: #442040)
  * softwarecenter/view/catview.py:
    - do not crash if no icon can be found (LP: #441171)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 05 Oct 2009 16:38:48 +0200

software-center (0.4.4) karmic; urgency=low

  * debian/rules:
    - cleanup, we do not need python-central, all the python code is
      in a private dir
  * softwarecenter/view/appview.py:
    - display the package name in parenthesis if the application name
      appears multiple times in the database (e.g. for a generic name
      like "Terminal") LP: #434625
  * softwarecenter/app.py, softwarecenter/view/viewswitcher.py:
    - automatically switch back to the previous view if the progress
      view is empty and the user has not navigated away manually
      (LP: #431907)
  * po/ro.po:
    - added Romanian translation (thanks to Alex Eftimie)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 02 Oct 2009 18:18:16 +0200

software-center (0.4.3) karmic; urgency=low

  * debian/rules:
    - remove .PHONY again, it breaks building with DH7

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 29 Sep 2009 09:26:32 +0200

software-center (0.4.2) karmic; urgency=low

  [ Michael Vogt ]
  * softwarecenter/view/pendingview.py:
    - fix empty progress view when the daemon exited in between
      (LP: #437685)
  * softwarecenter/view/appdetailsview.py:
    - fix crash when no candidate for a package can be found

  [ Loïc Minier ]
  * Add .PHONY to rules.

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 28 Sep 2009 17:05:20 +0200

software-center (0.4.1) karmic; urgency=low

  [ Michael Vogt ]
  * softwarecenter/view/widgets/imagedialog.py:
    - ignore gconf errors when trying to read the proxy settings
      (LP: #436129)